erDiagram
    %% 1) Dominio academico
    INSTITUICOES_FAESA ||--o{ CURSOS : oferta
    CURSOS ||--o{ TURMAS : organiza

    TURMAS ||--o{ TURMA_DISCIPLINAS : oferece
    DISCIPLINAS ||--o{ TURMA_DISCIPLINAS : compoe

    USUARIOS ||--o{ MATRICULAS_ACADEMICAS : possui
    TURMAS ||--o{ MATRICULAS_ACADEMICAS : recebe

    MATRICULAS_ACADEMICAS ||--o{ DISCIPLINAS_CURSADAS : cursa
    TURMA_DISCIPLINAS ||--o{ DISCIPLINAS_CURSADAS : vincula
    DISCIPLINAS_CURSADAS ||--o{ AVALIACOES_DISCIPLINA : gera

    %% 2) Planejamento e aprendizagem
    USUARIOS ||--o{ PLANOS_ESTUDO : cria
    PLANOS_ESTUDO ||--o{ METAS_SEMANAIS : define
    PLANOS_ESTUDO ||--o{ ATIVIDADES_ESTUDO : contem
    USUARIOS ||--o{ ATIVIDADES_ESTUDO : realiza
    USUARIOS ||--o{ EXERCICIOS_CONCENTRACAO : pratica

    TRILHAS_APRENDIZAGEM ||--o{ TRILHA_RECURSOS : organiza
    RECURSOS ||--o{ TRILHA_RECURSOS : integra

    USUARIOS ||--o{ USUARIO_RECURSOS : acessa
    RECURSOS ||--o{ USUARIO_RECURSOS : eh_acessado

    %% 3) Comunidade e suporte
    USUARIOS ||--o{ FORUNS_DISCUSSAO : cria
    FORUNS_DISCUSSAO ||--o{ FORUM_POSTS : contem
    FORUM_POSTS ||--o{ FORUM_COMENTARIOS : recebe
    USUARIOS ||--o{ FORUM_POSTS : publica
    USUARIOS ||--o{ FORUM_COMENTARIOS : comenta

    USUARIOS ||--o{ MENTORIAS : mentor
    USUARIOS ||--o{ MENTORIAS : mentorado

    USUARIOS ||--o{ NOTIFICACOES : recebe
    USUARIOS ||--o{ QUESTIONARIOS_BEM_ESTAR : responde
    USUARIOS ||--|| GAMIFICACAO : possui

    EVENTOS ||--o{ USUARIO_EVENTOS : recebe_inscricao
    USUARIOS ||--o{ USUARIO_EVENTOS : participa

    USUARIOS ||--o{ CHAT_TICKETS : abre
    USUARIOS ||--o{ CHAT_TICKETS : atende
    CHAT_TICKETS ||--o{ CHAT_MENSAGENS : contem
    USUARIOS ||--o{ CHAT_MENSAGENS : autor

    %% 4) RF16, RF14 e LGPD
    USUARIOS ||--o{ CHATBOT_CONVERSAS : inicia
    CHATBOT_CONVERSAS ||--o{ CHATBOT_MENSAGENS : contem
    USUARIOS ||--o{ CHATBOT_MENSAGENS : interage

    USUARIOS ||--o{ CONSENTIMENTOS_LGPD : concede
    USUARIOS ||--o{ AUDITORIA_DADOS : registra
    RELATORIOS_ANONIMIZADOS ||--o{ AUDITORIA_DADOS : rastreia
